Package updater, handle 64 bits only.

--- a/automatic/prometheus-grok-exporter/prometheus-grok-exporter.nuspec
+++ b/automatic/prometheus-grok-exporter/prometheus-grok-exporter.nuspec
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!-- Do not remove this test for UTF-8: if “Ω” doesn’t appear as greek uppercase omega letter enclosed in quotation marks, you should use an editor that supports UTF-8, not this one. -->
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
@@ -19,7 +19,7 @@
 ### About Grok
 [Grok] is a tool to parse crappy unstructured log data into something structured and queryable. Grok is heavily used in [Logstash] to provide log data as input for [ElasticSearch].    
     </description>
-    <releaseNotes>https://github.com/fstab/grok_exporter/releases/tag/v0.2.8</releaseNotes>
+    <releaseNotes>https://github.com/fstab/grok_exporter/releases</releaseNotes>
     <dependencies>
       <dependency id="chocolatey-core.extension" version="1.1.0" />
     </dependencies>
