--- a/automatic/prometheus-grok-exporter/prometheus-grok-exporter.nuspec
+++ b/automatic/prometheus-grok-exporter/prometheus-grok-exporter.nuspec
@@ -16,9 +16,9 @@
     <tags>prometheus-grok-exporter prometheus grok monitoring</tags>
     <summary>Export Prometheus metrics from arbitrary unstructured log data</summary>
     <description>
-### About Grok
-[Grok] is a tool to parse crappy unstructured log data into something structured and queryable. Grok is heavily used in [Logstash] to provide log data as input for [ElasticSearch].    
-    </description>
+[Grok] is a tool to parse crappy unstructured log data into something structured and queryable. Grok is heavily used in [Logstash] to provide log data as input for [ElasticSearch].
+Grok ships with about 120 predefined patterns for syslog logs, apache and other webserver logs, mysql logs, etc. It is easy to extend Grok with custom patterns.
+The `grok_exporter` aims at porting Grok from the [ELK stack] to [Prometheus] monitoring. The goal is to use Grok patterns for extracting Prometheus metrics from arbitrary log files.    </description>
     <releaseNotes>https://github.com/fstab/grok_exporter/releases</releaseNotes>
     <dependencies>
       <dependency id="chocolatey-core.extension" version="1.1.0" />
