Fixed nuget spec for Grok Exporter.

--- a/automatic/prometheus-grok-exporter/prometheus-grok-exporter.nuspec
+++ b/automatic/prometheus-grok-exporter/prometheus-grok-exporter.nuspec
@@ -9,16 +9,16 @@
     <title>Prometheus Grok exporter</title>
     <authors>Fabian Stäber</authors>
     <projectUrl>https://github.com/fstab/grok_exporter</projectUrl>
-    <iconUrl>https://chocolatey.org/content/packageimages/prometheus.2.0.0.png</iconUrl>
+    <iconUrl>https://cdn.statically.io/img/upload.wikimedia.org/wikipedia/en/thumb/3/38/Prometheus_software_logo.svg/220px-Prometheus_software_logo.svg.png</iconUrl>
     <licenseUrl>https://github.com/fstab/grok_exporter/blob/master/LICENSE</licenseUrl>
+    <bugTrackerUrl>https://github.com/fstab/grok_exporter/issues</bugTrackerUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <docsUrl>https://github.com/fstab/grok_exporter/blob/master/README.md</docsUrl>
     <tags>prometheus-grok-exporter prometheus grok monitoring</tags>
     <summary>Export Prometheus metrics from arbitrary unstructured log data</summary>
     <description>
-[Grok] is a tool to parse crappy unstructured log data into something structured and queryable. Grok is heavily used in [Logstash] to provide log data as input for [ElasticSearch].
-Grok ships with about 120 predefined patterns for syslog logs, apache and other webserver logs, mysql logs, etc. It is easy to extend Grok with custom patterns.
-The `grok_exporter` aims at porting Grok from the [ELK stack] to [Prometheus] monitoring. The goal is to use Grok patterns for extracting Prometheus metrics from arbitrary log files.    </description>
+[Grok](https://www.elastic.co/guide/en/logstash/current/plugins-filters-grok.html) is a tool to parse crappy unstructured log data into something structured and queryable. Grok is heavily used in [Logstash](https://www.elastic.co/products/logstash) to provide log data as input for [ElasticSearch](https://www.elastic.co/).
+Grok ships with about 120 predefined patterns for syslog logs, apache and other webserver logs, mysql logs, etc. It is easy to extend Grok with custom patterns. The `grok_exporter` aims at porting Grok from the [ELK stack](https://www.elastic.co/webinars/introduction-elk-stack) to [Prometheus](https://prometheus.io/) monitoring. The goal is to use Grok patterns for extracting Prometheus metrics from arbitrary log files.</description>
     <releaseNotes>https://github.com/fstab/grok_exporter/releases</releaseNotes>
   </metadata>
   <files>
